--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -710,6 +710,7 @@ template {
   display: flex;
   justify-content: center;
   margin-top: 2.5rem;
+  gap: 1.25rem;
 }
 .alreadyMember__buttonContainer img {
   max-width: 12.375rem;
