--- a/styles/style.scss
+++ b/styles/style.scss
@@ -752,6 +752,7 @@ template {
   display: flex;
   justify-content: center;
   margin-top: 2.5rem;
+  gap: 1.25rem;
 }
 
 .alreadyMember__buttonContainer img {
